<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">百科</string>
	<string name="home">首页</string>
	<string name="main_my_info">分类索引</string>
	<string name="history">历史</string>
	<string name="main_news">特色内容</string>
	<string name="baike">选择百科入口</string>
	<string name="wiki">维基百科</string>
	<string name="bai">百度百科</string>
	<string name="enter">进入</string>

	<string name="searchMenu">查询</string>
    <string name="searchLabel">查询</string>
    <string name="searchHint">请输入查询内容</string>
    <string name="search_invoke">搜索调用</string>
    <string name="search">搜索</string>
    <string name="catagory_search">按类别搜索</string>
    <string name="content_search">按词条搜索</string>
    <string name="son_category">子分类</string>
    <string name="page_in_category">分类中的页面</string>
    <string name="summary">概述</string>

</resources>
